compiler/src/tests/basic/negatives/test_while_float_condition.diag
src/tests/basic/negatives/test_while_float_condition.bas:1:7: error[E1001]: Expected BOOLEAN condition, got FLOAT. Suggestion: use 3.14 <> 0.
WHILE 3.14
      ^
